# ohtuvarasto

./: .coveragerc  .pylintrc  README.md  pyproject.toml  test1.txt  test2.txt
poetry_test/: pyproject.toml
src/: varasto.py
src/tests/: varasto_test.py
