[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["LouiseOdier <maarit.vilen@helsinki.fi>"]
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
cowsay = "^6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
